--- a/portfolio.html
+++ b/portfolio.html
@@ -143,6 +143,21 @@
         <li class="foot-link"><a href="#" class="decoration link"><svg class="icon foot-icon" width="20" height="20"><use href="./images/svg/sprite.svg#icon-linkedin"></use></svg></a></li>
       </ul>
      </div>
+      <div class="mail-send">
+    <h3 class="head-mail">підпишіться на розсилку</h3>
+    <form name="mail-send">
+      <div class="mail-form">
+        <label>
+                <input class="mail-input" type="email" name="email" placeholder="E-mail" />
+              </label>
+              <button type="submit" class="mail-btn">Підписатися
+                <svg class="mail-svg" width="24" height="24">
+                <use href="./images/svg/sprite.svg#send"></use>
+                </svg>
+              </button>
+      </div>
+    </form>
+  </div>
      </div>
     </footer>
   </body>
