--- a/index.html
+++ b/index.html
@@ -210,21 +210,21 @@
        <p class="mheader">Залиште свої дані, ми вам передзвонимо</p>
         <div class="input">
           <label for="name" class="flabel">Ім'я</label>
-          <input class="form-input" type="text" name="your-name" id="name">
+         <div class="input-svg"><input class="form-input" type="text" name="your-name" id="name">
           <svg class="form-svg" width="18" height="18"><use href="./images/svg/sprite.svg#icon-name"></use>
-          </svg>
+          </svg></div>
         </div>
         <div class="input">
           <label for="phone" class="flabel">Телефон</label>
-          <input class="form-input" type="tel" name="your-phone" id="phone">
+         <div class="input-svg"> <input class="form-input" type="tel" name="your-phone" id="phone">
           <svg class="form-svg" width="18" height="18"><use href="./images/svg/sprite.svg#icon-phone-num"></use>
-          </svg>
+          </svg></div>
         </div>
         <div class="input">
           <label for="email" class="flabel">Пошта</label>
-          <input class="form-input" type="email" name="your-email" id="email">
+         <div class="input-svg"> <input class="form-input" type="email" name="your-email" id="email">
           <svg class="form-svg" width="18" height="18"><use href="./images/svg/sprite.svg#icon-email"></use>
-          </svg>
+          </svg></div>
         </div>
         <div class="input">
            <label for="comment" class="flabel">Коментар</label>
@@ -239,7 +239,8 @@
               <use href="./images/svg/sprite.svg#svg-check"></use></svg>
               Погоджуюся з розсилкою та приймаю <a href="#" class="box-link">Умови договору</a>
           </label>
-        </div>
+        
+      </div>
         <button type="submit" class="modal-button">Відправити</button>
       </form>
       </div>
