--- a/index.html
+++ b/index.html
@@ -210,21 +210,27 @@
        <p class="mheader">Залиште свої дані, ми вам передзвонимо</p>
         <div class="input">
           <label for="name" class="flabel">Ім'я</label>
-         <div class="input-svg"><input class="form-input" type="text" name="your-name" id="name">
+         <div class="input-svg">
+          <input class="form-input" type="text" name="your-name" id="name">
           <svg class="form-svg" width="18" height="18"><use href="./images/svg/sprite.svg#icon-name"></use>
-          </svg></div>
+          </svg>
+        </div>
         </div>
         <div class="input">
           <label for="phone" class="flabel">Телефон</label>
-         <div class="input-svg"> <input class="form-input" type="tel" name="your-phone" id="phone">
+         <div class="input-svg"> 
+          <input class="form-input" type="tel" name="your-phone" id="phone">
           <svg class="form-svg" width="18" height="18"><use href="./images/svg/sprite.svg#icon-phone-num"></use>
-          </svg></div>
+          </svg>
+        </div>
         </div>
         <div class="input">
           <label for="email" class="flabel">Пошта</label>
-         <div class="input-svg"> <input class="form-input" type="email" name="your-email" id="email">
+         <div class="input-svg"> 
+          <input class="form-input" type="email" name="your-email" id="email">
           <svg class="form-svg" width="18" height="18"><use href="./images/svg/sprite.svg#icon-email"></use>
-          </svg></div>
+          </svg>
+        </div>
         </div>
         <div class="input">
            <label for="comment" class="flabel">Коментар</label>
